add ChecksumFilter